# cpp_education

./: CMakeLists.txt
task_1/: 02_02.cc  02_03.cc  02_06.cc  02_07.cc  02_08.cc  CMakeLists.txt
task_2/: CMakeLists.txt
task_2/02_09/: CMakeLists.txt
task_2/02_09/tests/: gcd_test.cc  lcm_test.cc
task_2/02_10/: CMakeLists.txt
task_2/02_10/src/: quicksort.cc  quicksort.h
task_2/02_10/tests/: quicksort_test.cc
task_2/03_01/: CMakeLists.txt
task_2/03_01/src/: rectangle.cc  rectangle.h
task_2/03_01/tests/: rectangle_test.cc
task_2/03_03/: CMakeLists.txt
task_2/03_03/src/: list.h
task_2/03_03/tests/: list_test.cc
task_2/03_04/: CMakeLists.txt
task_2/03_05/: CMakeLists.txt  main.cpp
task_2/03_06/: CMakeLists.txt
task_2/03_07/: CMakeLists.txt  main.cpp
task_2/03_09/: CMakeLists.txt  main.cc
task_2/03_10/: CMakeLists.txt
task_3/04_02/: CMakeLists.txt  main.cc
task_3/04_03/: CMakeLists.txt
task_3/04_03/src/: variadic_insert.h
task_3/04_03/tests/: variadic_insert_test.cc
task_3/04_05/: CMakeLists.txt
task_3/04_05/src/: fibonacci.h
task_3/04_05/tests/: fibonacci_test.cc
task_3/04_07/: CMakeLists.txt
task_3/04_07/src/: rational.h
task_3/04_07/tests/: rational_test.cc
task_3/04_08/: CMakeLists.txt
task_3/04_08/src/: tuple.h
task_3/04_08/tests/: tuple_test.cc
task_3/04_09/: CMakeLists.txt
task_3/04_09/src/: type_traits.h
task_3/04_09/tests/: type_traits_test.cc
task_4/: CMakeLists.txt
task_4/05_05/: CMakeLists.txt  rational.h  rational_test.cc
task_4/06_05/: CMakeLists.txt  library_v1.cc  library_v2.cc  main.cc
task_4/07_01/: CMakeLists.txt  quadratic_eq.cc
task_4/07_02/: CMakeLists.txt  rational.h  rational_test.cc
task_4/07_03/: README.md
task_4/07_04/: CMakeLists.txt  quicksort_4.h  quicksort_4_test.cc
task_4/07_05/: CMakeLists.txt  quicksort_4.h  quicksort_4_bench.cc
task_4/08_01/: CMakeLists.txt  fraud.cc
task_4/08_02/: CMakeLists.txt  long_integer.cc  long_integer.h
task_4/08_03/: CMakeLists.txt  ilog2.h  ilog2_test.cc
task_4/08_04/: CMakeLists.txt  evolution.cc
task_4/08_05/: CMakeLists.txt  timer.cc  timer.h
task_5/: CMakeLists.txt
task_5/09_01/: CMakeLists.txt  tracer.cc  tracer.h
task_5/09_02/: CMakeLists.txt  binary_tree.cc  binary_tree.h
task_5/09_03/: CMakeLists.txt  design_patterns.cc  design_patterns.h
task_5/09_04/: CMakeLists.txt  quicksort.cc  quicksort.h  quicksort_test.cc
task_5/09_05/: CMakeLists.txt  list_iterator.cc  list_iterator.h
task_5/09_06/: CMakeLists.txt  fibonacci_iterator.cc  fibonacci_iterator.h  fibonacci_iterator_test.cc
task_5/09_07/: CMakeLists.txt  pimpl.cc  pimpl.h
task_5/09_08/: CMakeLists.txt  custom_new.cc  custom_new.h
task_5/09_09/: CMakeLists.txt  README.md  free_list_allocator.cc  free_list_allocator.h
task_5/09_10/: CMakeLists.txt  allocators.cc  allocators.h
task_5/10_01/: CMakeLists.txt  README.md  vector_deque_analysis.cc
task_5/10_02/: CMakeLists.txt  stack_with_min.cc
task_5/10_03/: CMakeLists.txt  game_of_life.cc
task_5/10_04/: CMakeLists.txt  fibonacci_matrix.cc
task_5/10_05/: CMakeLists.txt  README.md  hash_analysis.cc
task_5/11_01/: CMakeLists.txt  func_wrapper.cc
task_5/11_03/: CMakeLists.txt  quicksort_comparator.cc
